--- a/resources/tools/presentation/specification.yaml
+++ b/resources/tools/presentation/specification.yaml
@@ -441,6 +441,11 @@
         - 76  # Reconf
         - 77  # Reconf
 
+    plot-vpp-soak-2n-clx:
+      csit-vpp-perf-verify-2001-2n-clx:
+        - 93  # Soak
+        - 94  # Soak
+
     plot-dpdk-throughput-latency-2n-clx:
       csit-dpdk-perf-verify-2001-2n-clx:
         - 15  # NDRPDR sel
@@ -994,6 +999,37 @@
         - 34  # NDRPDR sel
         - 83  # SOAK
         - 86  # SOAK
+
+    vpp-soak-vs-ndr-2n-clx-ref:
+      csit-vpp-perf-verify-2001-2n-clx:
+        - 28  # NDRPDR sel
+        - 29  # NDRPDR sel
+        - 32  # NDRPDR sel
+        - 40  # NDRPDR sel
+        - 43  # NDRPDR sel
+        - 44  # NDRPDR sel
+        - 45  # NDRPDR sel
+        - 47  # NDRPDR sel
+        - 48  # NDRPDR sel
+        - 49  # NDRPDR sel
+    vpp-soak-vs-ndr-2n-clx-cmp:
+      csit-vpp-perf-verify-2001-2n-clx:
+        - 93  # SOAK
+        - 94  # Soak
+    vpp-soak-vs-ndr-2n-clx:
+      csit-vpp-perf-verify-2001-2n-clx:
+        - 28  # NDRPDR sel
+        - 29  # NDRPDR sel
+        - 32  # NDRPDR sel
+        - 40  # NDRPDR sel
+        - 43  # NDRPDR sel
+        - 44  # NDRPDR sel
+        - 45  # NDRPDR sel
+        - 47  # NDRPDR sel
+        - 48  # NDRPDR sel
+        - 49  # NDRPDR sel
+        - 93  # SOAK
+        - 94  # Soak
 
     vpp-performance-changes-3n-hsw-mrr-h1:
       csit-vpp-perf-verify-1904-3n-hsw:
@@ -2325,8 +2361,6 @@
 #      - 113 # NFV reconf sel
 #      - 114 # NFV reconf sel
 #      - 115 # NFV reconf sel
-#      - 83  # SOAK
-#      - 86  # SOAK
 #    csit-vpp-perf-verify-2001-2n-skx:
 #      - 21  # NDRPDR sel
 #      - 22  # NDRPDR sel
@@ -2386,6 +2420,8 @@
       - 89  # TCP
       - 90  # TCP
       - 91  # TCP
+      - 93  # Soak
+      - 94  # Soak
 
     csit-vpp-perf-verify-1908-3n-tsh:
       - 7   # NDRPDR sel
@@ -2675,7 +2711,7 @@
 ###                               T A B L E S                                ###
 ################################################################################
 
-## VPP Soak vs NDR
+## VPP Soak vs NDR - 2n-skx
 #- type: "table"
 #  title: "VPP Soak vs NDR 2n-skx"
 #  algorithm: "table_soak_vs_ndr"
@@ -2693,6 +2729,25 @@
 #    - "throughput"
 #    - "name"
 #    - "parent"
+
+# VPP Soak vs NDR - 2n-clx
+- type: "table"
+  title: "VPP Soak vs NDR 2n-clx"
+  algorithm: "table_soak_vs_ndr"
+  output-file: "{DIR[STATIC,VPP]}/soak-vs-ndr-2n-clx"
+  reference:
+    title: "NDR"
+    data: "vpp-soak-vs-ndr-2n-clx-ref"
+  compare:
+    title: "Soak"
+    data: "vpp-soak-vs-ndr-2n-clx-cmp"
+  data: "vpp-soak-vs-ndr-2n-clx"
+  include-tests: "NDR"
+  filter: "('NDRPDR' or 'SOAK') and not 'NF_DENSITY'"
+  parameters:
+    - "throughput"
+    - "name"
+    - "parent"
 
 ################################################################################
 
@@ -6091,41 +6146,41 @@
 
 ################################################################################
 
-## Soak Test (PLRsearch), boxes
-#- type: "plot"
-#  title: "VPP Critical rate: 30 Minutes Soak Test (PLRsearch)"
-#  algorithm: "plot_perf_box_name"
-#  output-file-type: ".html"
-#  output-file: "{DIR[STATIC,VPP]}/soak-test-1"
-#  data: "plot-vpp-soak-2n-skx"
-#  include:
-#    - "Tests.Vpp.Perf.L2.2N1L-25Ge2P1Xxv710-Avf-Eth-L2Patch-Soak.64B-2t1c-avf-eth-l2patch-soak"
-#    - "Tests.Vpp.Perf.L2.2N1L-25Ge2P1Xxv710-Avf-Eth-L2Xcbase-Soak.64B-2t1c-avf-eth-l2xcbase-soak"
-#    - "Tests.Vpp.Perf.L2.2N1L-25Ge2P1Xxv710-Avf-Eth-L2Bdbasemaclrn-Soak.64B-2t1c-avf-eth-l2bdbasemaclrn-soak"
-#    - "Tests.Vpp.Perf.L2.2N1L-25Ge2P1Xxv710-Eth-L2Patch-Soak.64B-2t1c-eth-l2patch-soak"
-#    - "Tests.Vpp.Perf.L2.2N1L-25Ge2P1Xxv710-Eth-L2Xcbase-Soak.64B-2t1c-eth-l2xcbase-soak"
-#    - "Tests.Vpp.Perf.L2.2N1L-25Ge2P1Xxv710-Eth-L2Bdbasemaclrn-Soak.64B-2t1c-eth-l2bdbasemaclrn-soak"
-#  layout:
-#    title: "30 Minutes Soak Test (PLRsearch)"
-#    layout: "plot-soak-throughput"
-#
-## Soak Test (PLRsearch), boxes
-#- type: "plot"
-#  title: "VPP Critical rate: 30 Minutes Soak Test (PLRsearch)"
-#  algorithm: "plot_perf_box_name"
-#  output-file-type: ".html"
-#  output-file: "{DIR[STATIC,VPP]}/soak-test-2"
-#  data: "plot-vpp-soak-2n-skx"
-#  include:
-#    - "Tests.Vpp.Perf.Vm Vhost.2N1L-25Ge2P1Xxv710-Eth-L2Bdbasemaclrn-Eth-2Vhostvr1024-1Vm-Vppl2Xc-Soak.64B-2t1c-eth-l2bdbasemaclrn-eth-2vhostvr1024-1vm-vppl2xc-soak"
-#    - "Tests.Vpp.Perf.Vm Vhost.2N1L-25Ge2P1Xxv710-Eth-L2Bdbasemaclrn-Eth-2Vhostvr1024-1Vm-Soak.64B-2t1c-eth-l2bdbasemaclrn-eth-2vhostvr1024-1vm-soak"
-#    - "Tests.Vpp.Perf.Container Memif.2N1L-25Ge2P1Xxv710-Eth-L2Bdbasemaclrn-Eth-2Memif-1Dcr-Soak.64B-2t1c-eth-l2bdbasemaclrn-eth-2memif-1dcr-soak"
-#    - "Tests.Vpp.Perf.Ip4.2N1L-25Ge2P1Xxv710-Avf-Ethip4-Ip4Base-Soak.64B-2t1c-avf-ethip4-ip4base-soak"
-#    - "Tests.Vpp.Perf.Ip4.2N1L-25Ge2P1Xxv710-Ethip4-Ip4Base-Soak.64B-2t1c-ethip4-ip4base-soak"
-#    - "Tests.Vpp.Perf.Ip6.2N1L-25Ge2P1Xxv710-Ethip6-Ip6Base-Soak.78B-2t1c-ethip6-ip6base-soak"
-#  layout:
-#    title: "30 Minutes Soak Test (PLRsearch)"
-#    layout: "plot-soak-throughput"
+# Soak Test (PLRsearch), boxes - 2n-clx
+- type: "plot"
+  title: "VPP Critical rate: 30 Minutes Soak Test (PLRsearch)"
+  algorithm: "plot_perf_box_name"
+  output-file-type: ".html"
+  output-file: "{DIR[STATIC,VPP]}/soak-test-1"
+  data: "plot-vpp-soak-2n-clx"
+  include:
+    - "Tests.Vpp.Perf.L2.2N1L-25Ge2P1Xxv710-Avf-Eth-L2Xcbase-Soak.64B-2t1c-avf-eth-l2xcbase-soak"
+    - "Tests.Vpp.Perf.L2.2N1L-25Ge2P1Xxv710-Avf-Eth-L2Bdbasemaclrn-Soak.64B-2t1c-avf-eth-l2bdbasemaclrn-soak"
+    - "Tests.Vpp.Perf.L2.2N1L-25Ge2P1Xxv710-Eth-L2Xcbase-Soak.64B-2t1c-eth-l2xcbase-soak"
+    - "Tests.Vpp.Perf.L2.2N1L-25Ge2P1Xxv710-Eth-L2Bdbasemaclrn-Soak.64B-2t1c-eth-l2bdbasemaclrn-soak"
+    - "Tests.Vpp.Perf.Ip4.2N1L-25Ge2P1Xxv710-Avf-Ethip4-Ip4Base-Soak.64B-2t1c-avf-ethip4-ip4base-soak"
+    - "Tests.Vpp.Perf.Ip4.2N1L-25Ge2P1Xxv710-Ethip4-Ip4Base-Soak.64B-2t1c-ethip4-ip4base-soak"
+  layout:
+    title: "30 Minutes Soak Test (PLRsearch)"
+    layout: "plot-soak-throughput"
+
+# Soak Test (PLRsearch), boxes - 2n-clx
+- type: "plot"
+  title: "VPP Critical rate: 30 Minutes Soak Test (PLRsearch)"
+  algorithm: "plot_perf_box_name"
+  output-file-type: ".html"
+  output-file: "{DIR[STATIC,VPP]}/soak-test-2"
+  data: "plot-vpp-soak-2n-clx"
+  include:
+    - "Tests.Vpp.Perf.Ip6.2N1L-25Ge2P1Xxv710-Avf-Ethip6-Ip6Base-Soak.78B-2t1c-avf-ethip6-ip6base-soak"
+    - "Tests.Vpp.Perf.Ip6.2N1L-25Ge2P1Xxv710-Ethip6-Ip6Base-Soak.78B-2t1c-ethip6-ip6base-soak"
+    - "Tests.Vpp.Perf.Container Memif.2N1L-25Ge2P1Xxv710-Avf-Eth-L2Bdbasemaclrn-Eth-2Memif-1Dcr-Soak.64B-2t1c-avf-eth-l2bdbasemaclrn-eth-2memif-1dcr-soak"
+    - "Tests.Vpp.Perf.Container Memif.2N1L-25Ge2P1Xxv710-Eth-L2Bdbasemaclrn-Eth-2Memif-1Dcr-Soak.64B-2t1c-eth-l2bdbasemaclrn-eth-2memif-1dcr-soak"
+    - "Tests.Vpp.Perf.Vm Vhost.2N1L-25Ge2P1Xxv710-Avf-Eth-L2Bdbasemaclrn-Eth-2Vhostvr1024-1Vm-Soak.64B-2t1c-avf-eth-l2bdbasemaclrn-eth-2vhostvr1024-1vm-soak"
+    - "Tests.Vpp.Perf.Vm Vhost.2N1L-25Ge2P1Xxv710-Avf-Eth-L2Bdbasemaclrn-Eth-2Vhostvr1024-1Vm-Vppl2Xc-Soak.64B-2t1c-avf-eth-l2bdbasemaclrn-eth-2vhostvr1024-1vm-vppl2xc-soak"
+  layout:
+    title: "30 Minutes Soak Test (PLRsearch)"
+    layout: "plot-soak-throughput"
 
 ###############################################################################
 
