--- a/resources/tools/presentation/specification.yaml
+++ b/resources/tools/presentation/specification.yaml
@@ -251,6 +251,14 @@
       csit-vpp-perf-verify-2001-3n-hsw:
         - 87  # hoststack
         - 88  # hoststack
+        - 89  # hoststack
+        - 90  # hoststack
+        - 91  # hoststack
+        - 92  # hoststack
+        - 93  # hoststack
+        - 94  # hoststack
+        - 95  # hoststack
+        - 96  # hoststack
 
     plot-dpdk-hdrh-lat-3n-hsw:
       csit-dpdk-perf-verify-2001-3n-hsw:
@@ -1686,6 +1694,63 @@
       hoverlabel:
         namelength: -1
 
+    plot-hoststack:
+      titlefont:
+        size: 16
+      xaxis:
+        title: "<b>Test Cases [Index]</b>"
+        titlefont:
+          size: 14
+        autorange: True
+        fixedrange: False
+        gridcolor: "rgb(230, 230, 230)"
+        linecolor: "rgb(220, 220, 220)"
+        linewidth: 1
+        showgrid: True
+        showline: True
+        showticklabels: True
+        tickcolor: "rgb(220, 220, 220)"
+        tickmode: "linear"
+        tickfont:
+          size: 14
+        zeroline: False
+      yaxis:
+        title: "<b>Bandwidth [Gbps]</b>"
+        titlefont:
+          size: 14
+        gridcolor: "rgb(230, 230, 230)"
+        hoverformat: ".4s"
+        linecolor: "rgb(220, 220, 220)"
+        linewidth: 1
+        rangemode: "tozero"
+        showgrid: True
+        showline: True
+        showticklabels: True
+        tickcolor: "rgb(230, 230, 230)"
+        tickformat: ".3s"
+        tickfont:
+          size: 14
+        zeroline: False
+      boxmode: "group"
+      boxgroupgap: 0.5
+      autosize: False
+      margin:
+        t: 50
+        b: 20
+        l: 80
+        r: 20
+      showlegend: True
+      legend:
+        orientation: "h"
+        font:
+          size: 14
+      width: 700
+      height: 800
+      paper_bgcolor: "#fff"
+      plot_bgcolor: "#fff"
+      hoverlabel:
+        namelength: -1
+
     plot-throughput:
       titlefont:
         size: 18
@@ -2163,6 +2228,14 @@
       - 85  # NDRPDR full
       - 87  # hoststack
       - 88  # hoststack
+      - 89  # hoststack
+      - 90  # hoststack
+      - 91  # hoststack
+      - 92  # hoststack
+      - 93  # hoststack
+      - 94  # hoststack
+      - 95  # hoststack
+      - 96  # hoststack
 
 #    csit-vpp-perf-verify-1904-3n-skx:
 #      - 7   # MRR sel
