Report: Enable pdf version
Change-Id: Ibcf08fe0568f9e12b9ab6cf96ebeeccdfcfa2487
Signed-off-by: Tibor Frank <tifrank@cisco.com>
(cherry picked from commit aee375a656e321b4d3e7d7ab54cbe37597a9cd02)

--- a/resources/tools/presentation/specification.yaml
+++ b/resources/tools/presentation/specification.yaml
@@ -2653,8 +2653,8 @@
   format:
     html:
     - full
-#    pdf:
-#    - minimal
+    pdf:
+    - minimal
 
 ################################################################################
 ###                               T A B L E S                                ###
