Report: Configure Report 2001.11
Change-Id: I5af4ef16464ee372d5ff9a41695870c22a3311bf
Signed-off-by: Tibor Frank <tifrank@cisco.com>

--- a/resources/tools/presentation/specification.yaml
+++ b/resources/tools/presentation/specification.yaml
@@ -2704,8 +2704,8 @@
   format:
     html:
     - full
-    pdf:
-    - minimal
+#    pdf:
+#    - minimal
 
 ################################################################################
 ###                               T A B L E S                                ###
