Add all ports from 3n-tsh tg to topofile
Without it, we're running the risk of unused port being bound to linux
kernel driver when t-rex starts, preventing it from starting.

Change-Id: I3a1702e364c06809b527830bf9addacd63fb47ee
Signed-off-by: juraj.linkes <juraj.linkes@pantheon.tech>

--- a/topologies/available/lf_3n_tsh_testbed33.yaml
+++ b/topologies/available/lf_3n_tsh_testbed33.yaml
@@ -1,4 +1,4 @@
-# Copyright (c) 2019 PANTHEON.tech and/or its affiliates.
+# Copyright (c) 2020 PANTHEON.tech and/or its affiliates.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at:
@@ -39,6 +39,18 @@ nodes:
         mac_address: "3c:fd:fe:a8:aa:c1"
         pci_address: "0000:18:00.1"
         link: link1
+        driver: i40e
+        model: Intel-X710
+      port2:
+        mac_address: "3c:fd:fe:a8:aa:c2"
+        pci_address: "0000:18:00.2"
+        link: link10
+        driver: i40e
+        model: Intel-X710
+      port3:
+        mac_address: "3c:fd:fe:a8:aa:c3"
+        pci_address: "0000:18:00.3"
+        link: link11
         driver: i40e
         model: Intel-X710
   DUT1:
