--- a/topologies/available/lf_3n_hsw_testbed3.yaml
+++ b/topologies/available/lf_3n_hsw_testbed3.yaml
@@ -10,103 +10,103 @@ nodes:
   TG:
     type: TG
     subtype: TREX
-    host: "10.30.51.20"
+    host: "10.30.51.24"
     arch: x86_64
     port: 22
     username: testuser
     password: Csit1234
     interfaces:
       port1:
-        # t2-tg1-c1/p1 - 40GE port1 on Intel NIC xl710 2p40GE.
-        mac_address: "68:05:ca:35:76:a8"
+        # t3-tg1-c1/p1 - 40GE port1 on Intel NIC xl710 2p40GE.
+        mac_address: "68:05:ca:35:79:40"
         pci_address: "0000:02:00.0"
         ip4_address: "172.16.10.2"
         driver: i40e
         link: link1
         model: Intel-XL710
       port2:
-        # t2-tg1-c1/p2 - 40GE port2 on Intel NIC xl710 2p40GE.
-        mac_address: "68:05:ca:35:76:a9"
+        # t3-tg1-c1/p2 - 40GE port2 on Intel NIC xl710 2p40GE.
+        mac_address: "68:05:ca:35:79:41"
         pci_address: "0000:02:00.1"
         ip4_address: "172.16.20.2"
         driver: i40e
         link: link2
         model: Intel-XL710
       port3:
-        # t2-tg1-c2/p1 - 10GE port1 on Intel NIC x710 2p10GE.
-        mac_address: "3c:fd:fe:9c:ed:5c"
+        # t3-tg1-c2/p1 - 10GE port1 on Intel NIC x710 2p10GE.
+        mac_address: "3c:fd:fe:9c:ef:98"
         pci_address: "0000:05:00.0"
         ip4_address: "172.16.30.2"
         driver: i40e
         link: link3
         model: Intel-X710
       port4:
-        # t2-tg1-c2/p2 - 10GE port2 on Intel NIC x710 2p10GE.
-        mac_address: "3c:fd:fe:9c:ed:5d"
+        # t3-tg1-c2/p2 - 10GE port2 on Intel NIC x710 2p10GE.
+        mac_address: "3c:fd:fe:9c:ef:99"
         pci_address: "0000:05:00.1"
         ip4_address: "172.16.40.2"
         driver: i40e
         link: link4
         model: Intel-X710
       port5:
-        # t2-tg1-c3/p1 - 10GE port1 on Intel NIC x710 2p10GE.
-        mac_address: "3c:fd:fe:9c:ee:5c"
+        # t3-tg1-c3/p1 - 10GE port1 on Intel NIC x710 2p10GE.
+        mac_address: "3c:fd:fe:9c:ee:28"
         pci_address: "0000:07:00.0"
         ip4_address: "172.16.50.2"
         driver: i40e
         link: link5
         model: Intel-X710
       port6:
-        # t2-tg1-c3/p2 - 10GE port2 on Intel NIC x710 2p10GE.
-        mac_address: "3c:fd:fe:9c:ee:5d"
+        # t3-tg1-c3/p2 - 10GE port2 on Intel NIC x710 2p10GE.
+        mac_address: "3c:fd:fe:9c:ee:29"
         pci_address: "0000:07:00.1"
         ip4_address: "172.16.60.2"
         driver: i40e
         link: link6
         model: Intel-X710
       port7:
-        # t2-tg1-c4/p1 - 40GE port1 on Intel NIC xl710 2p40GE.
-        mac_address: "68:05:ca:37:1f:1c"
+        # t3-tg1-c4/p1 - 40GE port1 on Intel NIC xl710 2p40GE.
+        mac_address: "68:05:ca:35:79:1c"
         pci_address: "0000:86:00.0"
         ip4_address: "172.16.70.2"
         driver: i40e
         link: link7
         model: Intel-XL710
       port8:
-        # t2-tg1-c4/p2 - 40GE port2 on Intel NIC xl710 2p40GE.
-        mac_address: "68:05:ca:37:1f:19"
+        # t3-tg1-c4/p2 - 40GE port2 on Intel NIC xl710 2p40GE.
+        mac_address: "68:05:ca:35:79:19"
         pci_address: "0000:86:00.1"
         ip4_address: "172.16.80.2"
         driver: i40e
         link: link8
         model: Intel-XL710
       port9:
-        # t2-tg1-c5/p1 - 10GE port1 on Intel NIC x710 2p10GE.
-        mac_address: "3c:fd:fe:9c:ed:7c"
+        # t3-tg1-c5/p1 - 10GE port1 on Intel NIC x710 2p10GE.
+        mac_address: "3c:fd:fe:9c:ee:74"
         pci_address: "0000:88:00.0"
         ip4_address: "172.16.90.2"
         driver: i40e
         link: link9
         model: Intel-X710
       port10:
-        # t2-tg1-c5/p2 - 10GE port2 on Intel NIC x710 2p10GE.
-        mac_address: "3c:fd:fe:9c:ed:7d"
+        # t3-tg1-c5/p2 - 10GE port2 on Intel NIC x710 2p10GE.
+        mac_address: "3c:fd:fe:9c:ee:75"
         pci_address: "0000:88:00.1"
         ip4_address: "172.16.100.2"
         driver: i40e
         link: link10
         model: Intel-X710
       port11:
-        # t2-tg1-c6/p1 - 10GE port1 on Intel NIC x710 2p10GE.
-        mac_address: "3c:fd:fe:9c:ee:58"
+        # t3-tg1-c6/p1 - 10GE port1 on Intel NIC x710 2p10GE.
+        mac_address: "3c:fd:fe:9c:ef:38"
         pci_address: "0000:84:00.0"
         ip4_address: "172.16.110.1"
         driver: i40e
         link: link11
         model: Intel-X710
       port12:
-        # t2-tg1-c6/p2 - 10GE port2 on Intel NIC x710 2p10GE.
-        mac_address: "3c:fd:fe:9c:ee:59"
+        # t3-tg1-c6/p2 - 10GE port2 on Intel NIC x710 2p10GE.
+        mac_address: "3c:fd:fe:9c:ef:39"
         pci_address: "0000:84:00.1"
         ip4_address: "172.16.110.2"
         driver: i40e
@@ -114,7 +114,7 @@ nodes:
         model: Intel-X710
   DUT1:
     type: DUT
-    host: "10.30.51.21"
+    host: "10.30.51.25"
     arch: x86_64
     port: 22
     username: testuser
@@ -128,80 +128,80 @@ nodes:
       netconf_port: 2831
     interfaces:
       port1:
-        # t2-sut1-c1/p1 - 10GE port1 on Intel NIC x520 2p10GE.
-        mac_address: "90:e2:ba:b5:02:b8"
+        # t3-sut1-c1/p1 - 10GE port1 on Intel NIC x520 2p10GE.
+        mac_address: "90:e2:ba:b5:01:dc"
         pci_address: "0000:0a:00.0"
         ip4_address: "172.17.21.1"
         driver: ixgbe
         link: link21
         model: Intel-X520-DA2
       port2:
-        # t2-sut1-c1/p2 - 10GE port2 on Intel NIC x520 2p10GE.
-        mac_address: "90:e2:ba:b5:02:b9"
+        # t3-sut1-c1/p2 - 10GE port2 on Intel NIC x520 2p10GE.
+        mac_address: "90:e2:ba:b5:01:dd"
         pci_address: "0000:0a:00.1"
-        ip4_address: "172.17.30.1"
+        ip4_address: "172.16.30.1"
         driver: ixgbe
         link: link3
         model: Intel-X520-DA2
       port3:
-        # t2-sut1-c2/p1 - 40GE port1 on Cisco VIC 1385 2p40GE.
-        mac_address: "04:62:73:8c:ca:cd"
+        # t3-sut1-c2/p1 - 40GE port1 on Cisco VIC 1385 2p40GE.
+        mac_address: "04:62:73:f8:80:c1"
         pci_address: "0000:13:00.0"
         ip4_address: "172.17.22.1"
         driver: enic
         link: link22
         model: Cisco-VIC-1385
       port4:
-        # t2-sut1-c2/p2 - 40GE port2 on Cisco VIC 1385 2p40GE.
-        mac_address: "04:62:73:8c:ca:ce"
+        # t3-sut1-c2/p2 - 40GE port2 on Cisco VIC 1385 2p40GE.
+        mac_address: "04:62:73:f8:80:c2"
         pci_address: "0000:15:00.0"
         ip4_address: "172.16.10.1"
         driver: enic
         link: link1
         model: Cisco-VIC-1385
       port5:
-        # t2-sut1-c4/p1 - 40GE port1 on Intel NIC xl710 2p40GE.
-        mac_address: "68:05:ca:35:77:08"
+        # t3-sut1-c4/p1 - 40GE port1 on Intel NIC xl710 2p40GE.
+        mac_address: "68:05:ca:37:25:18"
         pci_address: "0000:88:00.0"
         ip4_address: "172.17.23.1"
         driver: i40e
         link: link23
         model: Intel-XL710
       port6:
-        # t2-sut1-c4/p2 - 40GE port2 on Intel NIC xl710 2p40GE.
-        mac_address: "68:05:ca:35:77:09"
+        # t3-sut1-c4/p2 - 40GE port2 on Intel NIC xl710 2p40GE.
+        mac_address: "68:05:ca:37:25:19"
         pci_address: "0000:88:00.1"
         ip4_address: "172.16.70.1"
         driver: i40e
         link: link7
         model: Intel-XL710
       port7:
-        # t2-sut1-c5/p1 - 10GE port1 on Intel NIC x710 2p10GE.
-        mac_address: "3c:fd:fe:9c:ee:ec"
+        # t3-sut1-c5/p1 - 10GE port1 on Intel NIC x710 2p10GE.
+        mac_address: "3c:fd:fe:9c:ef:34"
         pci_address: "0000:8a:00.0"
         ip4_address: "172.17.24.1"
         driver: i40e
         link: link24
         model: Intel-X710
       port8:
-        # t2-sut1-c5/p2 - 10GE port2 on Intel NIC x710 2p10GE.
-        mac_address: "3c:fd:fe:9c:ee:ed"
+        # t3-sut1-c5/p2 - 10GE port2 on Intel NIC x710 2p10GE.
+        mac_address: "3c:fd:fe:9c:ef:35"
         pci_address: "0000:8a:00.1"
         ip4_address: "172.16.90.1"
         driver: i40e
         link: link9
         model: Intel-X710
       port9:
-        # t2-sut1-cm/p1 - 10GE port1 on Cisco VIC 1227 2p10GE.
-        mac_address: "00:fe:c8:e4:d0:9b"
+        # t3-sut1-cm/p1 - 10GE port1 on Cisco VIC 1227 2p10GE.
+        mac_address: "00:fe:c8:e5:46:d0"
         pci_address: "0000:06:00.0"
         ip4_address: "172.17.25.1"
         driver: enic
         link: link25
         model: Cisco-VIC-1227
       port10:
-        # t2-sut1-cm/p2 - 10GE port2 on Cisco VIC 1227 2p10GE.
-        mac_address: "00:fe:c8:e4:d0:9c"
+        # t3-sut1-cm/p2 - 10GE port2 on Cisco VIC 1227 2p10GE.
+        mac_address: "00:fe:c8:e5:46:d1"
         pci_address: "0000:07:00.0"
         ip4_address: "172.16.50.1"
         driver: enic
@@ -209,7 +209,7 @@ nodes:
         model: Cisco-VIC-1227
   DUT2:
     type: DUT
-    host: "10.30.51.22"
+    host: "10.30.51.26"
     arch: x86_64
     port: 22
     username: testuser
@@ -223,80 +223,80 @@ nodes:
       netconf_port: 2831
     interfaces:
       port1:
-        # t2-sut2-c1/p1 - 10GE port1 on Intel NIC x520 2p10GE.
-        mac_address: "90:e2:ba:b5:01:d8"
+        # t3-sut3-c1/p1 - 10GE port1 on Intel NIC x520 2p10GE.
+        mac_address: "90:e2:ba:b5:0f:38"
         pci_address: "0000:0a:00.0"
         ip4_address: "172.16.40.1"
         driver: ixgbe
         link: link4
         model: Intel-X520-DA2
       port2:
-        # t2-sut2-c1/p2 - 10GE port2 on Intel NIC x520 2p10GE.
-        mac_address: "90:e2:ba:b5:01:d9"
+        # t3-sut3-c1/p2 - 10GE port2 on Intel NIC x520 2p10GE.
+        mac_address: "90:e2:ba:b5:0f:39"
         pci_address: "0000:0a:00.1"
         ip4_address: "172.17.21.2"
         driver: ixgbe
         link: link21
         model: Intel-X520-DA2
       port3:
-        # t2-sut2-c2/p1 - 40GE port1 on Cisco VIC 1385 2p40GE.
-        mac_address: "ec:bd:1d:08:8f:88"
+        # t3-sut3-c2/p1 - 40GE port1 on Cisco VIC 1385 2p40GE.
+        mac_address: "04:62:73:8c:78:2f"
         pci_address: "0000:13:00.0"
         ip4_address: "172.16.20.1"
         driver: enic
         link: link2
         model: Cisco-VIC-1385
       port4:
-        # t2-sut2-c2/p2 - 40GE port2 on Cisco VIC 1385 2p40GE.
-        mac_address: "ec:bd:1d:08:8f:89"
+        # t3-sut3-c2/p2 - 40GE port2 on Cisco VIC 1385 2p40GE.
+        mac_address: "04:62:73:8c:78:30"
         pci_address: "0000:15:00.0"
         ip4_address: "172.17.22.2"
         driver: enic
         link: link22
         model: Cisco-VIC-1385
       port5:
-        # t2-sut2-c4/p1 - 40GE port1 on Intel NIC xl710 2p40GE.
-        mac_address: "68:05:ca:35:76:98"
+        # t3-sut3-c4/p1 - 40GE port1 on Intel NIC xl710 2p40GE.
+        mac_address: "68:05:ca:35:76:b0"
         pci_address: "0000:88:00.0"
         ip4_address: "172.16.80.1"
         driver: i40e
         link: link8
         model: Intel-XL710
       port6:
-        # t2-sut2-c4/p2 - 40GE port2 on Intel NIC xl710 2p40GE.
-        mac_address: "68:05:ca:35:76:99"
+        # t3-sut3-c4/p2 - 40GE port2 on Intel NIC xl710 2p40GE.
+        mac_address: "68:05:ca:35:76:b1"
         pci_address: "0000:88:00.1"
         ip4_address: "172.17.23.2"
         driver: i40e
         link: link23
         model: Intel-XL710
       port7:
-        # t2-sut2-c5/p1 - 10GE port1 on Intel NIC x710 2p10GE.
-        mac_address: "3c:fd:fe:9c:ee:e4"
+        # t3-sut3-c5/p1 - 10GE port1 on Intel NIC x710 2p10GE.
+        mac_address: "3c:fd:fe:9c:ee:e0"
         pci_address: "0000:8a:00.0"
         ip4_address: "172.16.100.1"
         driver: i40e
         link: link10
         model: Intel-X710
       port8:
-        # t2-sut2-c5/p2 - 10GE port2 on Intel NIC x710 2p10GE.
-        mac_address: "3c:fd:fe:9c:ee:e5"
+        # t3-sut3-c5/p2 - 10GE port2 on Intel NIC x710 2p10GE.
+        mac_address: "3c:fd:fe:9c:ee:e1"
         pci_address: "0000:8a:00.1"
         ip4_address: "172.17.24.2"
         driver: i40e
         link: link24
         model: Intel-X710
       port9:
-        # t2-sut2-cm/p1 - 10GE port1 on Cisco VIC 1227 2p10GE.
-        mac_address: "00:fe:c8:e4:eb:4b"
+        # t3-sut3-cm/p1 - 10GE port1 on Cisco VIC 1227 2p10GE.
+        mac_address: "00:fe:c8:e5:44:19"
         pci_address: "0000:06:00.0"
         ip4_address: "172.16.60.1"
         driver: enic
         link: link6
         model: Cisco-VIC-1227
       port10:
-        # t2-sut2-cm/p2 - 10GE port2 on Cisco VIC 1227 2p10GE.
-        mac_address: "00:fe:c8:e4:eb:4c"
+        # t3-sut3-cm/p2 - 10GE port2 on Cisco VIC 1227 2p10GE.
+        mac_address: "00:fe:c8:e5:44:1a"
         pci_address: "0000:07:00.0"
         ip4_address: "172.17.25.2"
         driver: enic
