Perf: NAT44 endpoint-dependent mode
Change-Id: I7dd5fe8637020b4b120563fca716e8160d7291ef
Signed-off-by: Jan Gelety <jgelety@cisco.com>

--- a/resources/tools/testbed-setup/ansible/roles/calibration/tasks/main.yaml
+++ b/resources/tools/testbed-setup/ansible/roles/calibration/tasks/main.yaml
@@ -9,15 +9,15 @@
   tags:
     - install-dependencies
 
-#- name: Calibration - Check CPU Power States
-#  shell: "lscpu"
-#  register: current_lscpu
-#  changed_when: false
-#  failed_when: |
-#    'CPU min MHz' in current_lscpu.stdout and
-#    'Intel(R) Xeon(R)' in current_lscpu.stdout
-#  tags:
-#    - check-cpu-frequency
+- name: Calibration - Check CPU Power States
+  shell: "lscpu"
+  register: current_lscpu
+  changed_when: false
+  failed_when: |
+    'CPU min MHz' in current_lscpu.stdout and
+    'Intel(R) Xeon(R)' in current_lscpu.stdout
+  tags:
+    - check-cpu-frequency
 
 - name: Calibration - Check Kernel Version of "{{ kernel_version }}"
   shell: "uname -r"
