Update TODOs for tox
Change-Id: I9368557aed7508d9401628c0ddfda475da42bc99
Signed-off-by: Vratko Polak <vrpolak@cisco.com>

--- a/tox.ini
+++ b/tox.ini
@@ -88,7 +88,8 @@ commands = bash {[tox]checker_dir}/tc_naming.sh
 
 # Keep testenvs sorted alphabetically, please.
 
-# TODO: Migrate current docs check here.
+# TODO: Add a checker against unresolved merge conflicts.
+#       See: https://gerrit.fd.io/r/c/vpp/+/26956
 # TODO: Create voting "pylint violations should not increase" checker.
 # TODO: Create voting checker to reject suites with Force Tags of other suite.
 # TODO: Create voting checker against tags not in tag_documentation.rst file.
